WTF, JavaScriptCore fails to build with trunk clang: operators new, new[], delete, delete[] cannot be declared inline https://bugs.webkit.org/show_bug.cgi?id=124186 <rdar://problem/15644039>

Reviewed by Geoffrey Garen and Anders Carlsson.

Following <http://llvm.org/viewvc/llvm-project?view=revision&revision=193044>
(http://llvm.org/bugs/show_bug.cgi?id=17591>), Clang emits warnings when
operator new, delete are inlined. Such definitions cannot be inline per
replacement.functions (17.6.4.6/3) of the C++ standard. For now,
disable these warnings instead of exporting these functions.

* wtf/FastMalloc.h:

Canonical link: https://commits.webkit.org/143979@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160838 268f45cc-cd09-0410-ab3c-d52691b4dbfc