Source/WTF/wtf/FastMalloc.h
@@ -262,6 +262,13 @@ using WTF::fastMallocAllow;
 #if COMPILER(MSVC)
 #pragma warning(push)
 #pragma warning(disable: 4290) // Disable the C++ exception specification ignored warning.
+#elif COMPILER(CLANG) && defined(__has_warning)
+#pragma clang diagnostic push
+#if __has_warning("-Winline-new-delete")
+// FIXME: The operator new, delete definitions cannot be inline per replacement.functions (17.6.4.6/3) of the C++
+// standard. As a workaround, disable warnings for such usage. See <https://bugs.webkit.org/show_bug.cgi?id=124186>.
+#pragma clang diagnostic ignored "-Winline-new-delete"
+#endif
 #endif
 WTF_PRIVATE_INLINE void* operator new(size_t size) throw (std::bad_alloc) { return fastMalloc(size); }
 WTF_PRIVATE_INLINE void* operator new(size_t size, const std::nothrow_t&) throw() { return fastMalloc(size); }
@@ -273,6 +280,8 @@ WTF_PRIVATE_INLINE void operator delete[](void* p) throw() { fastFree(p); }
 WTF_PRIVATE_INLINE void operator delete[](void* p, const std::nothrow_t&) throw() { fastFree(p); }
 #if COMPILER(MSVC)
 #pragma warning(pop)
+#elif COMPILER(CLANG) && defined(__has_warning)
+#pragma clang diagnostic pop
 #endif
 
 #endif // ENABLE(GLOBAL_FASTMALLOC_NEW)
